feat(drain): Make core drain Java 8
This supersedes #16