@@ -22,6 +22,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 
@@ -155,10 +156,10 @@ public class DrainJson {
      */
     public LogCluster findLogMessage(@Nonnull String message) {
         // sprint message by delimiter / whitespaces
-        var contentTokens = Tokenizer.tokenize(message, delimiters);
+        List<String> contentTokens = Tokenizer.tokenize(message, delimiters);
 
         // Search the prefix tree
-        var matchCluster = treeSearch(contentTokens);
+        InternalLogCluster matchCluster = treeSearch(contentTokens);
 
         //System.out.println("Found node: "+matchCluster);
 
@@ -174,10 +175,10 @@ public class DrainJson {
      */
     public LogCluster parseLogMessage(@Nonnull String message) {
         // sprint message by delimiter / whitespaces
-        var contentTokens = Tokenizer.tokenize(message, delimiters);
+        List<String> contentTokens = Tokenizer.tokenize(message, delimiters);
 
         // Search the prefix tree
-        var matchCluster = treeSearch(contentTokens);
+        InternalLogCluster matchCluster = treeSearch(contentTokens);
 
         if (matchCluster == null) {
             // create cluster if it doesn't exists, using log content tokens as template tokens
@@ -197,8 +198,8 @@ public class DrainJson {
     InternalLogCluster treeSearch(@Nonnull List<String> logTokens) {
 
         // at first level, children are grouped by token (word) count
-        var tokensCount = logTokens.size();
-        var node = this.root.get(tokensCount);
+        int tokensCount = logTokens.size();
+        Node node = this.root.get(tokensCount);
 
         // the prefix tree is empty
         if (node == null) {
@@ -222,7 +223,7 @@ public class DrainJson {
             }
 
             // descend
-            var nextNode = node.get(token);
+            Node nextNode = node.get(token);
             // if null try get from generic pattern
             if (nextNode == null) {
                 nextNode = node.get(PARAM_MARKER);
@@ -248,7 +249,7 @@ public class DrainJson {
         InternalLogCluster maxCluster = null;
 
         for (InternalLogCluster cluster : clusters) {
-            var seqDistance = computeSeqDistance(cluster.internalTokens(), logTokens);
+            SeqDistance seqDistance = computeSeqDistance(cluster.internalTokens(), logTokens);
             if (seqDistance.similarity > maxSimilarity
                 || (seqDistance.similarity == maxSimilarity
                     && seqDistance.paramCount > maxParamCount)) {
@@ -303,7 +304,7 @@ public class DrainJson {
     private void addLogClusterToPrefixTree(@Nonnull InternalLogCluster newLogCluster) {
         int tokensCount = newLogCluster.internalTokens().size();
 
-        var node = this.root.getOrCreateChild(tokensCount);
+        Node node = this.root.getOrCreateChild(tokensCount);
 
         // handle case of empty log message
         if (tokensCount == 0) {
@@ -367,7 +368,7 @@ public class DrainJson {
      * @return Non modifiable list of current clusters.
      */
     public List<LogCluster> clusters() {
-        return List.copyOf(clusters);
+        return Collections.unmodifiableList(new ArrayList<>(clusters));
     }
 
 
